<resources>
    <string name="app_name">FitnessGuide</string>
    <string name="access_code">Enter the access code</string>
    <string name="submit">Send</string>
    <string name="progress_message">Lets begin with workout ...</string>
    <string name="preference_file_key">theleague.android.com.fitnessguide.PREFERENCE_FILE_KEY</string>
    <string name="view_workouts">View saved workouts</string>
    <string name="home_scr_title">Welcome to the Fitness Guide!</string>
    <string name="empty_workout_list">Oops! I guess no workout today...</string>
    <string name="title_activity_exercise_details">ExerciseDetailsActivity</string>
    <string name="pause_exercise">Hold</string>
    <string name="repeat_exercise">Repeat</string>
    <string name="complete_exercise">Complete</string>
    <string name="exercise_freq_inday">Perform</string>
</resources>
