<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_scr_title"
        android:textAlignment="gravity"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/colorAccent"
        android:layout_margin="@dimen/activity_vertical_margin"/>

    <LinearLayout android:id="@+id/ll_access_code"
        android:layout_below="@id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
       >

    <EditText
        android:id="@+id/etAccessCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/access_code"
        android:background="@drawable/edittext_border"
        android:layout_weight="1"/>

    <Button android:id="@+id/btnAccessCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_weight="1"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        />

    </LinearLayout>

    <Button android:id="@+id/btnView"
        android:layout_below="@+id/ll_access_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/view_workouts"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        />

</RelativeLayout>
