<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="theleague.android.com.fitnessguide.activities.ExerciseDetailsActivity">

    <RelativeLayout
        android:id="@+id/activity_exercise_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <!-- Exercise Description details -->
        <TextView
            android:id="@+id/tvExerciseDescTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="Title"
            android:typeface="sans"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <LinearLayout android:id="@+id/ll_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tvExerciseDescTitle"
            android:background="@color/colorBlack"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivExcerciseImg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tvExerciseDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_image"
            android:layout_margin="10dp"
            android:textColor="@color/colorAccent"
            android:text="description"
            android:typeface="serif"
            android:textAlignment="textStart"
            android:textStyle="italic"/>

        <!--<WebView android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvExerciseDesc">
        </WebView>-->

        <!-- Horizontal divider-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tvExerciseDesc"
            android:background="#FF0000FF" />

        <!-- Vertical divider-->
        <View
            android:layout_width="1dp"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tvExerciseDesc"
            android:background="#FF0000FF" />

        <LinearLayout
            android:id="@+id/ll_repeat"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/tvExerciseDesc"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"
                android:text="@string/repeat_exercise" />

            <TextView
                android:id="@+id/tv_repeat"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"
                android:text="1" />

        </LinearLayout>

        <!-- Vertical divider-->
        <View
            android:layout_width="1dp"
            android:layout_height="90dp"
            android:layout_below="@id/tvExerciseDesc"
            android:layout_toRightOf="@id/ll_repeat"
            android:background="#FF0000FF" />


        <LinearLayout
            android:id="@+id/ll_hold"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/tvExerciseDesc"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/ll_repeat"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"
                android:text="@string/pause_exercise" />

            <TextView
                android:id="@+id/tv_hold"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <!-- Vertical divider-->
        <View
            android:layout_width="1dp"
            android:layout_height="90dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvExerciseDesc"
            android:background="#FF0000FF" />

        <!-- Horizontal divider-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/ll_repeat"
            android:background="#FF0000FF" />

        <!-- Vertical divider-->
        <View
            android:layout_width="1dp"
            android:layout_height="90dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/ll_repeat"
            android:background="#FF0000FF" />

        <LinearLayout
            android:id="@+id/ll_complete"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@id/ll_repeat"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"
                android:text="@string/complete_exercise" />

            <TextView
                android:id="@+id/tv_complete"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:gravity="center_horizontal"
                android:text="1" />

        </LinearLayout>

        <!-- Vertical divider-->
        <View
            android:layout_width="1dp"
            android:layout_height="90dp"
            android:layout_below="@id/ll_repeat"
            android:layout_toRightOf="@id/ll_complete"
            android:background="#FF0000FF" />

        <LinearLayout
            android:id="@+id/ll_perform"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_below="@+id/ll_hold"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/ll_complete"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:text="@string/exercise_freq_inday" />

            <TextView
                android:id="@+id/tv_perform"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:text="1" />

        </LinearLayout>

        <!-- Vertical divider-->
        <View
            android:layout_width="1dp"
            android:layout_height="90dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ll_hold"
            android:background="#FF0000FF" />

        <!-- Horizontal divider-->
        <View
            android:id="@+id/horiz_divider_two"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/ll_complete"
            android:background="#FF0000FF" />

        <RelativeLayout android:id="@+id/rl_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/horiz_divider_two"
            android:layout_centerHorizontal="true">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/circular"
                android:secondaryProgress="0" />


            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:layout_alignBottom="@+id/progressBar"
                android:layout_centerInParent="true"
                android:text="count"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/btn_timer_ctrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimaryDark"
                android:layout_toRightOf="@id/progressBar"
                android:text="Start"/>
        </RelativeLayout>


    </RelativeLayout>
</ScrollView>
